FISH-8652: Var and list construction in IterableUtilTest